--- a/index.css
+++ b/index.css
@@ -1,57 +1,68 @@
-.message {
-  text-align: center;
-  font-size: 20px;
-  color: black;
+:root {
+  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+
+  color-scheme: light dark;
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #242424;
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-.element {
-  text-align: center;
+a {
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: inherit;
+}
+a:hover {
+  color: #535bf2;
 }
 
-.first {
-  text-align: center;
-  font-size: 10px;
-  background-color: #0b69ff;
+body {
+  margin: 0;
+  display: flex;
+  place-items: center;
+  min-width: 320px;
+  min-height: 100vh;
 }
 
-.second {
-  text-align: center;
-  font-size: 10px;
-  background-color: #2dca73;
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
 }
 
-.third {
-  text-align: center;
-  font-size: 10px;
-  background-color: #ffb800;
+button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+button:hover {
+  border-color: #646cff;
+}
+button:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
 }
 
-.four {
-  text-align: center;
-  font-size: 10px;
-  background-color: #ff0b37;
-}
-
-.first-image {
-  text-align: center;
-  height: 40px;
-  width: 40px;
-}
-
-.second-image {
-  text-align: center;
-  height: 40px;
-  width: 40px;
-}
-
-.third-image {
-  text-align: center;
-  height: 40px;
-  width: 40px;
-}
-
-.four-image {
-  text-align: center;
-  height: 40px;
-  width: 40px;
+@media (prefers-color-scheme: light) {
+  :root {
+    color: #213547;
+    background-color: #ffffff;
+  }
+  a:hover {
+    color: #747bff;
+  }
+  button {
+    background-color: #f9f9f9;
+  }
 }
